# uiautoagent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agent_demo.py  android_controller.py  bbox_detector.py  device_agent.py  device_controller.py  main.py  pyproject.toml  task_memory.yaml.bak
src/uiautoagent/: __init__.py  ai.py  types.py
src/uiautoagent/agent/: __init__.py  ai_utils.py  device_agent.py  executor.py  image_similarity.py  memory.py  plan.py  report.py
src/uiautoagent/cli/: main.py
src/uiautoagent/controller/: android.py
src/uiautoagent/detector/: bbox_detector.py
tests/: test_device_agent_actions.py  test_executor_prompt.py  test_image_similarity.py  test_plan_adapter.py  test_task_memory.py
